# SP_kursova

./: CMakeLists.txt  Makefile  README.md
patches/: 0001-fix-truncation-error.patch  0002-formatting-use-tabs-instead-of-spaces.patch
src/: calculator.cpp  main.cpp
